--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -115,14 +115,15 @@
 
   <Button
       android:id="@+id/signup"
+      style="@style/ButtonFlat"
+      android:layout_marginTop="8dp"
       android:onClick="openMain"
-      android:layout_marginTop="10dp"
-      app:layout_constraintTop_toBottomOf="@id/ti2"
-      app:layout_constraintEnd_toStartOf="@id/guidelineRight"
-      app:layout_constraintStart_toStartOf="@id/guidelineLeft"
       android:text="Signup"
-      style="@style/ButtonFlat" />
-  
+      app:layout_constraintEnd_toStartOf="@id/guidelineRight"
+      app:layout_constraintHorizontal_bias="1.0"
+      app:layout_constraintStart_toStartOf="@id/guidelineLeft"
+      app:layout_constraintTop_toBottomOf="@id/ti2" />
+
   <Button
       android:layout_width="0dp"
       android:layout_height="wrap_content"
