--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,5 +7,7 @@
     </style>
 
     <style name="Theme.NiceStart" parent="Base.Theme.NiceStart" />
-    <style name="Theme.NiceStart.ActionBar" parent="Theme.Material3.DayNight" />
+    <style name="Theme.NiceStart.ActionBar" parent="Theme.Material3.DayNight">
+
+    </style>
 </resources>
