--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="marron_claro">#C1A76A</color>
     <color name="marron_oscuro">#3D2808</color>
     <color name="transparente">#00FFFF00</color>
+    <color name="fucsia_700">#4D0A20</color>
 
 </resources>
